...
          SingleChildScrollView(
            scrollDirection: Axis.horizontal,
            padding: const EdgeInsets.only(left: 30),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                factoryButton(1, 'Factory 1', Icons.factory),
                const SizedBox(
                  width: 20,
                ),
                factoryButton(2, 'Factory 2', Icons.factory),
                const SizedBox(
                  width: 20,
                ),
                factoryButton(3, 'Factory 3', Icons.factory),
                const SizedBox(
                  width: 20,
...
