...
                  Navigator.of(context).pop(
                    MaterialPageRoute(
                      builder: (context) => const factoryDashboard(),
                    ),
                  );
                },
                child: Text('submit', style: TextStyle(fontSize: 20)),
              ),
            ),
          ],
        )),
      ),
    );
...
